{
    "name": "MyMap",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "6108befa-043f-4cf5-bf5c-754d1c45946f",
            "actions": [
                {
                    "name": "MovementAndJump",
                    "type": "Value",
                    "id": "20fb39e2-5458-40ff-aa7b-da2c7cc62343",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "e75e0b5d-8ef1-4c45-a11c-4d175926da50",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAndJump",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ea31b98b-533a-479e-ac93-4ed41780403f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAndJump",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f95adc86-d031-4332-9dbb-77f45717c94b",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAndJump",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2a49be79-7c11-4b2a-b32f-2791583333df",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAndJump",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ad525172-e643-43ba-9d75-1a15aba57ed0",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAndJump",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}